<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ac_main_tv"
        android:textSize="18sp"
        android:textColor="#f00"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        tools:text="Hello World!" />

    <EditText
        android:id="@+id/ac_main_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@null"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ac_main_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>